<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <View
        android:id="@+id/view2"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view4"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="160dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="170dp"
        android:onClick="salir"
        android:text="@string/salir_Butoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="20dp"
        android:onClick="saltar_Activity_Lineal"
        android:text="@string/saltar_Lineal_Button"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="20dp"
        android:onClick="saltar_Activity_Exponencial"
        android:text="@string/saltar_Exponencial_Button"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>