<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity_Exponencial">

    <View
        android:id="@+id/view8"
        android:layout_width="180dp"
        android:layout_height="520dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <View
        android:id="@+id/view7"
        android:layout_width="180dp"
        android:layout_height="520dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/outYView_Y"
        android:layout_width="120dp"
        android:layout_height="280dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outXView_X"
        app:layout_constraintTop_toBottomOf="@+id/editText2_Y" />

    <TextView
        android:id="@+id/outXView_X"
        android:layout_width="120dp"
        android:layout_height="280dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/outYView_Y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_X" />

    <EditText
        android:id="@+id/editText2_Y"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/outYView_Y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_X"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <EditText
        android:id="@+id/editText_X"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/outXView_X"
        app:layout_constraintEnd_toStartOf="@+id/editText2_Y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button14"
        android:layout_width="156dp"
        android:layout_height="66dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="26dp"
        android:onClick="saltar_Activity_Resultados"
        android:text="@string/saltar_Resultados_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/outYView_Y" />

    <Button
        android:id="@+id/button13"
        android:layout_width="156dp"
        android:layout_height="66dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="26dp"
        android:onClick="saltar_Activity_Principal"
        android:text="@string/saltar_Principal_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outXView_X" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="2dp"
        android:onClick="llenarY"
        android:text="@string/datos_de_Y_Button"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2_Y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="llenarX"
        android:text="@string/datos_de_X_Button"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_X"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>